# sf_project

./: CMakeLists.txt  README.md  Task.h  TaskManager.cpp  TaskManager.h  TaskPlugin.cpp  TaskPlugin.h  TaskProcessor.h  TaskProcessorAdaptiveThreads.cpp  TaskProcessorAdaptiveThreads.h  dynamic_loader.cpp
plugins/: BandwidthTester.cpp  BandwidthTester.h  CMakeLists.txt  NetworkClient.cpp  NetworkClient.h  SimpleHttpClient.cpp  SimpleHttpClient.h  bandwidth_tester.cpp
tests/: CMakeLists.txt  TestPlugin.h  TestPlugin_1000ms_false.cpp  TestPlugin_1000ms_true.cpp  TestPlugin_1001ms_false.cpp  TestPlugin_1001ms_true.cpp  TestPlugin_10ms_false.cpp  TestPlugin_10ms_true.cpp  TestPlugin_1500ms_true.cpp  TestPlugin_1ms_false.cpp  TestPlugin_1ms_true.cpp  TestPlugin_2000ms_false.cpp  TestPlugin_2000ms_true.cpp  TestPlugin_2001ms_true.cpp  TestPlugin_2002ms_true.cpp  TestPlugin_2100ms_true.cpp  TestPlugin_2200ms_true.cpp  TestPlugin_2300ms_true.cpp  TestPlugin_9000ms_false.cpp  TestPlugin_9000ms_true.cpp  TestPlugin_wrong_API.cpp  run_tests.sh  test_loader.cpp
